# walker

./: .gemini-ignore  .gitignore  .gitkeep  README.md  api.rst  cli.rst  conf.py  config.py  index.rst  main.py  pyproject.toml
src/: wanderer.toml
src/walker/: README.md  config.py  database.py  download_assets.py  file_processor.py  indexer.py  main.py  models.py  reporter.py  scanner.py  tui.css  tui.py  worker.py
src/walker/docs/: Makefile  make.bat
src/walker/docs/source/: api.rst  cli.rst  conf.py  index.rst
src/wanderer/: config.py  database.py  download_assets.py  file_processor.py  gui.py  gui_qt.py  indexer.py  log_manager.py  main.py  models.py  reporter.py  scanner.py  settings_view.ui  utils.py  worker.py
src/wanderer/docs/source/: conf.py  index.rst
src/wanderer/droid/: Running DROID.txt  droid.bat  droid.sh  sigtool
src/wanderer/models/all-MiniLM-L6-v2/: config_sentence_transformers.json
tests/: conftest.py  test_file_processor.py  test_main_cli.py
