[tool.poetry]
name = "walker"
version = "0.1.0"
description = "A powerful and efficient file indexer that recursively scans a directory and extracts rich metadata."
authors = ["Pablo @pabloamh"]
readme = "README.md"
packages = [{include = "walker", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
pymupdf = ">=1.26.4,<2.0.0"
python-docx = ">=1.2.0,<2.0.0"
sentence-transformers = ">=5.1.1,<6.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
numpy = ">=2.3.3,<3.0.0"
python-magic = ">=0.4.27,<0.5.0"
click = ">=8.3.0,<9.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
tqdm = ">=4.66.1"
imagehash = ">=4.3.2,<5.0.0"
attrs = ">=25.3.0,<26.0.0"
beautifulsoup4 = ">=4.14.2,<5.0.0"
pymediainfo = ">=7.0.0"
tinytag = ">=1.11.0,<2.0.0"
presidio-analyzer = ">=2.2.353,<3.0.0"
spacy = ">=3.7.0,<4.0.0"
presidio-anonymizer = ">=2.2.353,<3.0.0"
tomli = {version = ">=2.0.1", python = "<3.11"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
