[tool.poetry]
name = "walker"
version = "0.1.0"
description = "A powerful and efficient file indexer that recursively scans a directory and extracts rich metadata."
authors = ["Pablo @pabloamh"]
readme = "README.md"
packages = [{include = "walker", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pymupdf = "^1.26.4"
python-docx = "^1.2.0"
sentence-transformers = "^5.1.1"
scikit-learn = "^1.7.2"
numpy = "^2.3.3"
python-magic = "^0.4.27"
click = "^8.3.0"
sqlalchemy = "^2.0.43"
tqdm = "^4.67.1"
imagehash = "^4.3.2"
attrs = "^25.3.0"
beautifulsoup4 = "^4.14.2"
pymediainfo = "^7.0.1"
tinytag = "^2.1.2"
spacy = "^3.8.7"
presidio-analyzer = "^2.2.360"
presidio-anonymizer = "^2.2.360"
odfpy = "^1.4.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
